Added dashboard.html file

--- a/AdminLogin.html
+++ b/AdminLogin.html
@@ -264,7 +264,7 @@
                         location.replace = `AdminLogin.html`;
                     }
                     else {
-                        window.location.href = `UserDetails.html?token=${token}&username=${encodedUsername}`;
+                        window.location.href = `Dashboard.html?token=${token}&username=${encodedUsername}`;
                     }
 
                 })
