logout functionality in dashboard,added dashboard in userdetails and cameradetails.

--- a/CameraUserdetails.html
+++ b/CameraUserdetails.html
@@ -126,16 +126,16 @@
 
             <br>
             <div class="redirect-container">
-                <a href="https://sionyxadminpanel.s3.us-east-2.amazonaws.com/Adminpanel/UserDetails.html"
-                    id="dashboard-link"
-                    style="margin-bottom: 15px; color: rgb(12, 12, 12); background-color: white; text-decoration: none">
-                    <div style="display: inline-block;text-overflow:ellipsis"
-                        onmouseout="document.getElementById('dashboard-link').style.color='black'">
-                        <i class="fas fa-tachometer-alt icon" style="color: #333;"></i>Dashboard
-                    </div>
-                </a>
-
-                </a>
+                <a id="dashboard-link"
+        href="Dashboard.html"
+        style="margin-bottom: 15px; color: rgb(12, 12, 12); background-color: white; text-decoration: none">
+        <div style="display: inline-block;text-overflow:ellipsis"
+            onmouseout="document.getElementById('dashboard-link').style.color='black'">
+            <i class="fas fa-tachometer-alt icon" style="color: #333;"></i>Dashboard
+        </div>
+    </a>
+    <a href="UserDetails.html" ><i class="fas fa-user-plus icon"
+        style="color: rgb(148, 148, 148)"></i>Users</a>
                 <a href="#" onclick="myFunction()"><i class="fas fa-user-plus icon"></i>Add User</a>
                 <div id="snackbar">Still in implementation!</div>
 
@@ -175,15 +175,8 @@
             </div>
 
             <div class="redirect-container">
-                <a href="https://sionyxadminpanel.s3.us-east-2.amazonaws.com/Adminpanel/UserDetails.html"
-                    id="dashboard-link"
-                    style="margin-bottom: 15px; color: rgb(12, 12, 12); background-color: white; text-decoration: none">
-                    <div style="display: inline-block;text-overflow:ellipsis"
-                        onmouseout="document.getElementById('dashboard-link').style.color='black'">
-                        <i class="fas fa-tachometer-alt icon" style="color: #333;"></i>Dashboard
-                    </div>
-                </a>
-
+                <a href="UserDetails.html" ><i class="fas fa-user-plus icon"
+                    style="color: rgb(148, 148, 148)"></i>Users</a>
                 <a href="#" onclick="myFunction()"><i class="fas fa-user-plus icon"
                         style="color: rgb(148, 148, 148)"></i>Add User</a>
                 <div id="snackbarMob">Still in implementation!</div>
