--- a/UserDetails.html
+++ b/UserDetails.html
@@ -270,14 +270,18 @@
             <br>
             <div class="redirect-container">
                 <a id="dashboard-link"
-                    style="margin-bottom: 15px; color: rgb(12, 12, 12); background-color: white; text-decoration: none">
-                    <!-- href="https://sionyxadminpanel.s3.us-east-2.amazonaws.com/Adminpanel/UserDetails.html" -->
+        href="Dashboard.html"
+        style="margin-bottom: 15px; color: rgb(12, 12, 12); background-color: white; text-decoration: none">
+        <div style="display: inline-block;text-overflow:ellipsis"
+            onmouseout="document.getElementById('dashboard-link').style.color='black'">
+            <i class="fas fa-tachometer-alt icon" style="color: #333;"></i>Dashboard
+        </div>
+    </a>
 
-                    <div style="display: inline-block;text-overflow:ellipsis"
-                        onmouseout="document.getElementById('dashboard-link').style.color='black'">
-                        <i class="fas fa-tachometer-alt icon" style="color: #333;"></i>Dashboard
-                    </div>
-                </a>
+
+
+    <a href="UserDetails.html" ><i class="fas fa-user-plus icon"
+        style="color: rgb(148, 148, 148)"></i>Users</a>
 
                 <a href="#" onclick="myFunction()"><i class="fas fa-user-plus icon"
                         style="color: rgb(148, 148, 148)"></i>Add User</a>
@@ -319,11 +323,15 @@
                 <a href="https://sionyxadminpanel.s3.us-east-2.amazonaws.com/Adminpanel/UserDetails.html"
                     id="dashboard-link"
                     style="margin-bottom: 15px; color: rgb(12, 12, 12); background-color: white; text-decoration: none">
+                    
                     <div style="display: inline-block;text-overflow:ellipsis"
-                        onmouseout="document.getElementById('dashboard-link').style.color='black'">
-                        <i class="fas fa-tachometer-alt icon" style="color: #333;"></i>Dashboard
-                    </div>
-                </a>
+                    onmouseout="document.getElementById('dashboard-link').style.color='black'">
+                    <i class="fas fa-tachometer-alt icon" style="color: #333;"></i>Dashboard
+                </div>
+            </a
+
+                    <a href="UserDetails.html" ><i class="fas fa-user-plus icon"
+                        style="color: rgb(148, 148, 148)"></i>Users</a>
 
                 <a href="#" onclick="myFunction()"><i class="fas fa-user-plus icon"
                         style="color: rgb(148, 148, 148)"></i>Add User</a>
